k8s/local/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: praynr-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: praynr-api:local
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          command:
            - rq
            - worker
            - --url
            - redis://redis:6379/0
            - default
