k8s/local/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: praynr-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: praynr-local
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
